--- a/web/src/components/next-message-item/index.module.less
+++ b/web/src/components/next-message-item/index.module.less
@@ -10,6 +10,7 @@
     display: inline-flex;
     gap: 20px;
     width: 100%;
+    min-width: 0;
   }
   .messageItemContentReverse {
     flex-direction: row-reverse;
